# pyprjtemplate

./: cookiecutter.json
{{cookiecutter.project_name}}/: README.md  package.json  pyproject.toml  requirements.txt
{{cookiecutter.project_name}}/.github/: copilot-instructions.md
{{cookiecutter.project_name}}/src/: main.py
{{cookiecutter.project_name}}/static/: index.html  main.js
{{cookiecutter.project_name}}/templates/: README.md
